--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ architux/themes/*
 mugairyu/themes/*
 !mugairyu/themes/dimension
 mugairyu/content/elements.md
+mugairyu/content/elements.md
 dimension-template/
+mugairyu/old/
