--- a/mugairyu/config.toml
+++ b/mugairyu/config.toml
@@ -14,24 +14,9 @@ disableKinds=["RSS"]
   copyright = "Mugai-ryu France"
 
 [[params.social]]
-  medium = "twitter"
-  icon = "twitter"
-  link = "#"
-
-[[params.social]]
   medium = "facebook"
   icon = "facebook"
-  link = "#"
-
-[[params.social]]
-  medium = "instagram"
-  icon = "instagram"
-  link = "#"
-
-[[params.social]]
-  medium = "github"
-  icon = "github"
-  link = "#"
+  link = "https://www.facebook.com/musasinokuni.mugaikai/"
 
 [languages]
 [languages.fr]
